--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build": "npx tsc",
+    "start": "node dist/src/backend/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/src/backend/index.js\""
   },
   "keywords": [],
   "author": "",
@@ -15,13 +18,17 @@
     "cheerio": "1.0.0-rc.12",
     "cli-progress": "^3.12.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "got": "^12.6.0",
     "gpt-3-encoder": "^1.1.4",
     "openai": "^3.2.1"
   },
   "devDependencies": {
     "@types/cli-progress": "^3.11.0",
-    "@types/node": "^20.1.1",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.1.3",
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22",
     "prettier": "2.8.8",
     "typescript": "^5.0.4"
   }
