--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@azure/msal-node": "^1.17.2",
     "cheerio": "1.0.0-rc.12",
     "cli-progress": "^3.12.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "got": "^12.6.0",
     "gpt-3-encoder": "^1.1.4",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "pnpm": "^8.5.0"
   },
   "devDependencies": {
     "@types/cli-progress": "^3.11.0",
